# Glance

./: .gitignore  README.md
Glance/: CMakeLists.txt
Glance/main/: CMakeLists.txt  Glance.c  hardware.c  hardware.h  sntp_manager.c  sntp_manager.h  wifi_manager.c  wifi_manager.h
esp32-s3-calendar/: CMakeLists.txt  partitions.csv
esp32-s3-calendar/main/: CMakeLists.txt  esp32-s3-calendar.c  idf_component.yml
esp32-s3-calendar/main/ics/: ics_parser.c  ics_parser.h
esp32-s3-calendar/main/time/: ds3231.c  ds3231.h  sntp_time.c  sntp_time.h
esp32-s3-calendar/main/wifi/: softap_provisioning.c  softap_provisioning.h  wifi_manager.c  wifi_manager.h  wifi_storage.h
harware/: LICENSE  README.md
harware/v1.0/: BOM_PCB1_1_eCalendar_1_2025-08-17.csv
playground/esp32_s3_ics/main/: esp_32_s3_ics.c
playground/esp32_s3_rtc/: CMakeLists.txt
playground/esp32_s3_rtc/main/: CMakeLists.txt  esp32_s3_rtc.c
playground/esp32_s3_timezone/: CMakeLists.txt
playground/esp32_s3_timezone/main/: CMakeLists.txt  esp32_s3_timezone.c
playground/font_related/: build_subset_font.sh
playground/hw_v1_selftest/: CMakeLists.txt
playground/hw_v1_selftest/main/: CMakeLists.txt  hw_v1_selftest.c
playground/hw_v2.1_selftest/: CMakeLists.txt
playground/hw_v2.1_selftest/main/: CMakeLists.txt  epd_7in5_v2.c  hw_v2.1_selftest.c
playground/hw_v2_selftest/: CMakeLists.txt
playground/hw_v2_selftest/main/: CMakeLists.txt  device.c  device.h  hw_v2_selftest.c
playground/py_display_simulator/: README.md  main.py  requirements.txt
